--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       height: 100%;
       width: 0%;
       background: linear-gradient(to right, var(--primary), var(--accent));
-      transition: width 0.5s ease-in-out; /* Плавная анимация */
+      transition: width 0.3s ease;
     }
     nav {
       position: fixed;
@@ -152,11 +152,12 @@
       flex-direction: column;
       align-items: center;
       gap: 0.25rem;
-      transition: background 0.3s ease;
+    }
+    nav button i {
+      font-size: 1.3rem;
     }
     nav button.active {
-      background: var(--primary);
-      color: white;
+      color: var(--primary);
       font-weight: 700;
     }
     .app-wrapper {
@@ -315,16 +316,6 @@
       loadTelegram();
       showTab('home');
     });
-
-    function loadTelegram() {
-      const telegramUser = Telegram.WebApp.initDataUnsafe;
-      if (telegramUser) {
-        userData.username = telegramUser.user.first_name || "Игрок";
-        userData.avatar = telegramUser.user.photo_url || "https://placehold.co/64x64";
-        document.getElementById("profileName").textContent = userData.username;
-        document.getElementById("profileAvatar").src = userData.avatar;
-      }
-    }
   </script>
 </body>
 </html>
