--- a/index.html
+++ b/index.html
@@ -163,14 +163,13 @@
     .app-wrapper {
       position: relative;
       z-index: 1;
-      padding-bottom: 60px; /* Ensure content doesn't get hidden under the nav */
+      padding-bottom: 60px;
     }
   </style>
 </head>
 <body>
   <div class="app-wrapper">
     <header>SHARK TAPPER</header>
-
     <div id="tabs">
       <div class="shark-wrapper">
         <div class="shark-tap-container">
@@ -186,7 +185,6 @@
           <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard Shark" onclick="setSkin('skin2')" />
         </div>
       </div>
-
       <div class="profile-card">
         <img src="https://placehold.co/64x64" alt="Avatar" id="profileAvatar">
         <div class="profile-info">
@@ -198,7 +196,6 @@
           <span class="sub" id="profileJoin">С нами с 2025</span>
         </div>
       </div>
-
       <div id="leaderboard" style="display: none;">
         <h2 style="text-align:center;">Топ игроков</h2>
         <ul id="leaderboardList" style="list-style: none; padding: 0; margin: 0;">
@@ -206,7 +203,6 @@
         </ul>
       </div>
     </div>
-
     <nav>
       <button class="active" onclick="showTab('home')">
         <i class="fa-solid fa-gamepad"></i><span>Game</span>
@@ -221,19 +217,16 @@
         <i class="fa-solid fa-ranking-star"></i><span>Топ</span>
       </button>
     </nav>
-
     <div id="quests" style="display:none; padding: 1rem; text-align: center;">
       <h2>📝 Задания</h2>
       <p style="color: var(--subtext);">Скоро появятся увлекательные задания!</p>
     </div>
-
     <div id="shop" style="display:none;">
       <h2>🛍 Магазин</h2>
       <p style="text-align:center; color: var(--subtext);">Скоро доступно</p>
     </div>
-
   </div>
-
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
@@ -261,8 +254,7 @@
           let max = limits.find(l => userData.tokens < l) || 10000;
           let min = limits[limits.indexOf(max) - 1] || 0;
           let percent = ((userData.tokens - min) / (max - min)) * 100;
-          percent = Math.min(100, Math.max(0, percent));
-          bar.style.width = `${percent}%`;
+          bar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
         }
       }
 
@@ -290,7 +282,25 @@
             first_name: userData.username,
             photo_url: userData.avatar
           })
-        }).catch(error => console.error('Error saving progress:', error));
+        }).catch(console.error);
+      }
+
+      function loadProgress() {
+        if (!userId) return;
+        fetch(`${dbUrl}/users/${userId}.json`)
+          .then(res => res.json())
+          .then(data => {
+            if (data) {
+              userData.tokens = data.balance || 0;
+              userData.username = data.first_name || "Игрок";
+              userData.avatar = data.photo_url || "https://placehold.co/64x64";
+              document.getElementById("profileTokens").textContent = userData.tokens;
+              document.getElementById("profileName").textContent = userData.username;
+              document.getElementById("profileAvatar").src = userData.avatar;
+              updateXPDisplay();
+            }
+          })
+          .catch(console.error);
       }
 
       function loadLeaderboard() {
@@ -299,9 +309,7 @@
           .then(data => {
             const list = document.getElementById("leaderboardList");
             if (!data || Object.keys(data).length === 0) return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Пока пусто</li>';
-            const sorted = Object.entries(data)
-              .sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0))
-              .slice(0, 10);
+            const sorted = Object.entries(data).sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0)).slice(0, 10);
             list.innerHTML = sorted.map(([id, user], i) => `
               <li style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
                 <span style="font-weight: bold; color: var(--primary);">#${i + 1}</span>
@@ -310,7 +318,19 @@
                 <span style="margin-left:auto; color: var(--subtext);">${user.balance || 0} 💰</span>
               </li>`).join("");
           })
-          .catch(error => console.error('Error loading leaderboard:', error));
+          .catch(console.error);
+      }
+
+      function loadTelegram() {
+        const tgUser = Telegram?.WebApp?.initDataUnsafe?.user;
+        if (tgUser) {
+          userId = tgUser.id?.toString();
+          userData.username = tgUser.first_name || "Игрок";
+          userData.avatar = tgUser.photo_url || "https://placehold.co/64x64";
+          document.getElementById("profileName").textContent = userData.username;
+          document.getElementById("profileAvatar").src = userData.avatar;
+          loadProgress();
+        }
       }
 
       loadTelegram();
