--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shark Tapper</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    :root {
-      --primary: #2f80ed;
-      --accent: #56ccf2;
-      --bg: #f2f5f9;
-      --card-bg: #ffffff;
-      --text: #0d1b2a;
-      --subtext: #6c7787;
-      --border: #e0e6ed;
-    }
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: 'Montserrat', sans-serif;
       background: linear-gradient(180deg, #dbeafe 0%, #f0f4f8 100%);
-      background-size: cover;
-      color: var(--text);
+      color: #0d1b2a;
       overflow-x: hidden;
-      -webkit-font-smoothing: antialiased;
     }
     header {
-      background: none;
-      color: var(--primary);
-      padding: 1.5rem 1rem 1rem;
       text-align: center;
+      padding: 1.5rem 1rem 1rem;
       font-size: 2.5rem;
       font-family: 'Luckiest Guy', cursive;
+      color: #2f80ed;
       text-shadow: -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, 2px 2px 0 #fff;
+    }
+    .shark-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 1rem;
+    }
+    .shark-image {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      border: 4px solid #56ccf2;
+      background: #ffffff;
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.15);
+      object-fit: cover;
+      cursor: pointer;
     }
     .token-counter {
       margin-top: 8px;
       font-size: 1.25rem;
       font-weight: 600;
-      color: var(--primary);
-      background: var(--card-bg);
+      color: #2f80ed;
+      background: #ffffff;
       padding: 0.5rem 1rem;
       border-radius: 999px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
@@ -49,181 +54,153 @@
       align-items: center;
       gap: 0.5rem;
     }
-    .profile-info .sub {
-      font-size: 0.9rem;
-      color: var(--subtext);
+    .shark-gallery {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin: 1rem;
+    }
+    .shark-gallery img {
+      width: 52px;
+      height: 52px;
+      border-radius: 50%;
+      border: 2px solid #2f80ed;
+      background: #fff;
+      object-fit: cover;
+    }
+    .profile-card {
+      background: #ffffff;
+      border-radius: 2rem;
+      padding: 1.25rem;
+      margin: 1.5rem;
+      border: 1px solid #e0e6ed;
+      box-shadow: 0 12px 24px rgba(0,0,0,0.06);
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+    .profile-card img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      border: 2px solid #56ccf2;
+      object-fit: cover;
+    }
+    .profile-info .name {
+      font-weight: 700;
+      font-size: 1.2rem;
+    }
+    .xp-bar {
+      height: 8px;
+      background: #e0e6ed;
+      border-radius: 999px;
+      overflow: hidden;
+      margin-top: 0.25rem;
+    }
+    .xp-fill {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(to right, #2f80ed, #56ccf2);
+      transition: width 0.3s ease;
     }
   </style>
 </head>
 <body>
-  <div class="app-wrapper">
-    <header>SHARK TAPPER</header>
-    <div id="tabs">
-      <div class="shark-wrapper">
-        <div class="shark-tap-container">
-          <div class="token-counter" id="tokenCounter">
-            <img src="https://sinobu1.github.io/shark-tapper/coin_icon_small.png" alt="Coin Icon" class="coin-icon" />
-            <span id="profileTokens">0</span> coins
-          </div>
-          <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Tap Shark" class="shark-image" id="tapImage" onclick="handleTap()" />
-        </div>
-        <div class="shark-gallery">
-          <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Shark 1" onclick="setSkin('default')" />
-          <img src="https://sinobu1.github.io/shark-tapper/shark_skin1.png" alt="Gold Shark" onclick="setSkin('skin3')" />
-          <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard Shark" onclick="setSkin('skin2')" />
-        </div>
-      </div>
-      <div class="profile-card">
-        <img src="https://placehold.co/64x64" alt="Avatar" id="profileAvatar">
-        <div class="profile-info">
-          <span class="name" id="profileName">Player</span>
-          <span class="sub" id="profileLevel">Coins: 0</span>
-          <div class="xp-bar">
-            <div class="xp-fill" id="xpBar"></div>
-          </div>
-          <span class="sub" id="profileJoin">Since 2025</span>
-        </div>
-      </div>
-      <div id="leaderboard" style="display: none;">
-        <h2 style="text-align:center;">Leaderboard</h2>
-        <ul id="leaderboardList" style="list-style: none; padding: 0; margin: 0;">
-          <li style="text-align:center; color: var(--subtext);">Loading...</li>
-        </ul>
-      </div>
+  <header>SHARK TAPPER</header>
+  <div class="shark-wrapper">
+    <div class="token-counter">
+      <img src="https://sinobu1.github.io/shark-tapper/coin_icon_small.png" alt="Coin Icon" style="width: 20px; height: 20px;">
+      <span id="profileTokens">0</span> coins
     </div>
-    <nav>
-      <button class="active" onclick="showTab('home')">
-        <i class="fa-solid fa-gamepad"></i><span>Game</span>
-      </button>
-      <button onclick="showTab('quests')">
-        <i class="fa-solid fa-list-check"></i><span>Quests</span>
-      </button>
-      <button onclick="showTab('shop')">
-        <i class="fa-solid fa-store"></i><span>Shop</span>
-      </button>
-      <button onclick="showTab('leaderboard')">
-        <i class="fa-solid fa-ranking-star"></i><span>Top</span>
-      </button>
-    </nav>
-    <div id="quests" style="display:none; padding: 1rem; text-align: center;">
-      <h2>📝 Quests</h2>
-      <p style="color: var(--subtext);">Coming soon!</p>
-    </div>
-    <div id="shop" style="display:none;">
-      <h2>🛍 Shop</h2>
-      <p style="text-align:center; color: var(--subtext);">Coming soon</p>
+    <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Tap Shark" class="shark-image" id="tapImage">
+    <div class="shark-gallery">
+      <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Default" onclick="setSkin('default')">
+      <img src="https://sinobu1.github.io/shark-tapper/shark_skin1.png" alt="Gold" onclick="setSkin('skin3')">
+      <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard" onclick="setSkin('skin2')">
     </div>
   </div>
+  <div class="profile-card">
+    <img src="https://placehold.co/64x64" id="profileAvatar" alt="Avatar">
+    <div class="profile-info">
+      <span class="name" id="profileName">Player</span>
+      <span class="sub" id="profileLevel">Coins: 0</span>
+      <div class="xp-bar">
+        <div class="xp-fill" id="xpBar"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
-      let userId = null;
-      let userData = {
-        username: "Player",
-        avatar: "https://placehold.co/64x64",
-        tokens: 0
-      };
+    const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+    let userId = null;
+    let userData = {
+      username: "Player",
+      avatar: "https://placehold.co/64x64",
+      tokens: 0
+    };
 
-      window.handleTap = function() {
-        const counter = document.getElementById("profileTokens");
-        userData.tokens++;
-        counter.textContent = userData.tokens;
-        updateXPDisplay();
-        saveProgress();
-      }
-
-      function updateXPDisplay() {
-        const levelEl = document.getElementById("profileLevel");
-        if (levelEl) levelEl.textContent = `Coins: ${userData.tokens}`;
-        const bar = document.getElementById("xpBar");
-        if (bar) {
-          const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
-          let max = limits.find(l => userData.tokens < l) || 10000;
-          let min = limits[limits.indexOf(max) - 1] || 0;
-          let percent = ((userData.tokens - min) / (max - min)) * 100;
-          bar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
-        }
-      }
-
-      window.showTab = function(tabId) {
-        document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
-        document.querySelectorAll('nav button').forEach(btn => {
-          if (btn.textContent.toLowerCase().includes(tabId)) btn.classList.add('active');
-        });
-        ['home', 'quests', 'shop', 'leaderboard'].forEach(id => {
-          const el = document.getElementById(id);
-          if (el) el.style.display = (id === tabId) ? 'block' : 'none';
-        });
-        if (tabId === 'leaderboard') {
-          loadLeaderboard();
-        }
-      }
-
-      function saveProgress() {
-        if (!userId) return;
-        fetch(`${dbUrl}/users/${userId}.json`, {
-          method: "PUT",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            balance: userData.tokens,
-            first_name: userData.username,
-            photo_url: userData.avatar
-          })
-        }).catch(console.error);
-      }
-
-      function loadProgress() {
-        if (!userId) return;
-        fetch(`${dbUrl}/users/${userId}.json`)
-          .then(res => res.json())
-          .then(data => {
-            if (data) {
-              userData.tokens = data.balance || 0;
-              userData.username = data.first_name || "Player";
-              userData.avatar = data.photo_url || "https://placehold.co/64x64";
-              document.getElementById("profileTokens").textContent = userData.tokens;
-              document.getElementById("profileName").textContent = userData.username;
-              document.getElementById("profileAvatar").src = userData.avatar;
-              updateXPDisplay();
-            }
-          })
-          .catch(console.error);
-      }
-
-      function loadLeaderboard() {
-        fetch(`${dbUrl}/users.json`)
-          .then(res => res.json())
-          .then(data => {
-            const list = document.getElementById("leaderboardList");
-            if (!data || Object.keys(data).length === 0) return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">No data</li>';
-            const sorted = Object.entries(data).sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0)).slice(0, 10);
-            list.innerHTML = sorted.map(([id, user], i) => `
-              <li style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
-                <span style="font-weight: bold; color: var(--primary);">#${i + 1}</span>
-                <img src="${user.photo_url || 'https://placehold.co/32x32'}" style="width: 32px; height: 32px; border-radius: 50%; border: 2px solid var(--accent); object-fit: cover;">
-                <span>${user.first_name || 'Anonymous'}</span>
-                <span style="margin-left:auto; color: var(--subtext);">${user.balance || 0} 💰</span>
-              </li>`).join("");
-          })
-          .catch(console.error);
-      }
-
-      function loadTelegram() {
-        const tgUser = Telegram?.WebApp?.initDataUnsafe?.user;
-        if (tgUser) {
-          userId = tgUser.id?.toString();
-          userData.username = `${tgUser.first_name || ''} ${tgUser.last_name || ''}`.trim() || 'Player';
-          userData.avatar = tgUser.photo_url || "https://placehold.co/64x64";
-          document.getElementById("profileName").textContent = userData.username;
-          document.getElementById("profileAvatar").src = userData.avatar;
-          loadProgress();
-        }
-      }
-
-      loadTelegram();
-      showTab('home');
+    document.getElementById("tapImage").addEventListener("click", () => {
+      userData.tokens++;
+      document.getElementById("profileTokens").textContent = userData.tokens;
+      document.getElementById("profileLevel").textContent = `Coins: ${userData.tokens}`;
+      updateXPDisplay();
+      saveProgress();
     });
+
+    function updateXPDisplay() {
+      const bar = document.getElementById("xpBar");
+      const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
+      let max = limits.find(l => userData.tokens < l) || 10000;
+      let min = limits[limits.indexOf(max) - 1] || 0;
+      let percent = ((userData.tokens - min) / (max - min)) * 100;
+      bar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
+    }
+
+    function saveProgress() {
+      if (!userId) return;
+      fetch(`${dbUrl}/users/${userId}.json`, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          balance: userData.tokens,
+          first_name: userData.username,
+          photo_url: userData.avatar
+        })
+      });
+    }
+
+    function loadProgress() {
+      if (!userId) return;
+      fetch(`${dbUrl}/users/${userId}.json`)
+        .then(res => res.json())
+        .then(data => {
+          if (data) {
+            userData.tokens = data.balance || 0;
+            userData.username = data.first_name || "Player";
+            userData.avatar = data.photo_url || "https://placehold.co/64x64";
+            document.getElementById("profileTokens").textContent = userData.tokens;
+            document.getElementById("profileLevel").textContent = `Coins: ${userData.tokens}`;
+            document.getElementById("profileName").textContent = userData.username;
+            document.getElementById("profileAvatar").src = userData.avatar;
+            updateXPDisplay();
+          }
+        });
+    }
+
+    function loadTelegram() {
+      const tgUser = Telegram?.WebApp?.initDataUnsafe?.user;
+      if (tgUser) {
+        userId = tgUser.id?.toString();
+        userData.username = `${tgUser.first_name || ''} ${tgUser.last_name || ''}`.trim() || "Player";
+        userData.avatar = tgUser.photo_url || "https://placehold.co/64x64";
+        document.getElementById("profileName").textContent = userData.username;
+        document.getElementById("profileAvatar").src = userData.avatar;
+        loadProgress();
+      }
+    }
+
+    loadTelegram();
   </script>
 </body>
 </html>
